# event-scheduler-fastapi-vue

./: README.md  docker-compose.yml
backend/: Dockerfile  database.py  main.py  models.py  pyproject.toml  setup.cfg  worker.py
frontend/src/: App.vue
