[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "event_scheduler_backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "httpx",
    "greenstalk",
    "pydantic",
    "psycopg2-binary",
]